# vcs

./: .gitignore  .headache.dirs  .ocamlformat  CHANGES.md  COPYING.HEADER  NOTICE.md  README.md  REPRO.md  TODO.md  conf-hg.opam  dune  dune-project  dune-workspace-5.4  dune-workspace.5.5  dunolint  git-cli.opam  headache.sh  index.html  vcs-arg.opam  vcs-base.opam  vcs-base.opam.template  vcs-cli.opam  vcs-cli.opam.template  vcs-command.opam  vcs-dev.opam  vcs-git-backend.opam  vcs-git-backend.opam.template  vcs-git-blocking.opam  vcs-git-blocking.opam.template  vcs-git-cli.opam  vcs-git-eio.opam  vcs-git-eio.opam.template  vcs-git-miou.opam  vcs-git-provider.opam  vcs-git-provider.opam.template  vcs-git-unix.opam  vcs-git-unix.opam.template  vcs-git.opam  vcs-param.opam  vcs-private-libs-base.opam  (+32 more)
example/: README.md  dune  hello_blocking.ml  hello_error.ml  hello_git_cli.ml  hello_vcs.ml  hello_vcs_git_unix.ml
lib/bit_vector_fast_bitvector/src/: bit_vector.ml  bit_vector.mli  dune
lib/bit_vector_intf/src/: bit_vector_intf.mli  dune
lib/bit_vector_naive/src/: bit_vector.ml  bit_vector.mli  dune
lib/git_cli/src/: add.ml  add.mli  branch.ml  commit.ml  commit.mli  config.ml  config.mli  dune  git_cli.mli  init.ml  log.ml  ls_files.ml  ls_files.mli  munged_path.ml  munged_path.mli  name_status.ml  name_status.mli  num_status.ml  num_status.mli  refs.ml  refs.mli  rev_parse.ml  runtime.mli  show.ml  show.mli
lib/vcs/src/: author.ml  author.mli  bit_vector.ml  bit_vector.mli  branch_name.ml  branch_name.mli  commit_message.ml  commit_message.mli  container_key.ml  container_key.mli  dune  err.ml  err.mli  exn0.ml  exn0.mli  file_contents.ml  file_contents.mli  for_test.ml  for_test.mli  git.ml  git.mli  git_output0.ml  git_output0.mli  graph.ml  graph.mli  import.ml  import.mli  int_table.ml  int_table.mli  log.ml  log.mli  (+103 more)
src/stdlib/: absolute_path0.ml  absolute_path0.mli  array0.ml  array0.mli  bool0.ml  bool0.mli  char0.ml  char0.mli  code_error.ml  code_error.mli  dune  dyn0.ml  dyn0.mli  fsegment0.ml  fsegment0.mli  hashtbl0.ml  hashtbl0.mli  int0.ml  int0.mli  list0.ml  list0.mli  option0.ml  option0.mli  ordering0.ml  ordering0.mli  queue0.ml  queue0.mli  relative_path0.ml  relative_path0.mli  result0.ml  result0.mli  sexp0.ml  sexp0.mli  stdlib0.ml  stdlib0.mli  stdlib_compat4xx.ml  stdlib_compat4xx.mli  stdlib_compat5xx.ml  string0.ml  string0.mli  (+2 more)
src/vcs-test-helpers/: dune  vcs_test_helpers.ml  vcs_test_helpers.mli
src/volgo/: author.ml  author.mli  branch_name.ml  branch_name.mli  commit_message.ml  commit_message.mli  container_key.ml  container_key.mli  dune  error_intf.mli  file_contents.ml  file_contents.mli  git.mli  graph.ml  graph.mli  hg.ml  hg.mli  import.ml  import.mli  int_table.ml  int_table.mli  log.ml  log.mli  mock_rev_gen.ml  mock_rev_gen.mli  mock_revs.ml  mock_revs.mli  name_status.ml  name_status.mli  non_raising.ml  non_raising.mli  num_lines_in_diff.ml  num_lines_in_diff.mli  num_status.ml  num_status.mli  path_in_repo.ml  path_in_repo.mli  platform.ml  platform.mli  platform_repo.ml  (+83 more)
src/volgo-base/: author.ml  author.mli  branch_name.ml  branch_name.mli  commit_message.ml  commit_message.mli  dune  file_contents.ml  file_contents.mli  git.ml  git.mli  graph.ml  graph.mli  name_status.ml  name_status.mli  num_lines_in_diff.ml  num_lines_in_diff.mli  path_in_repo.ml  path_in_repo.mli  platform.ml  platform.mli  platform_repo.ml  platform_repo.mli  ref_kind.ml  ref_kind.mli  refs.ml  refs.mli  remote_branch_name.ml  remote_branch_name.mli  remote_name.ml  remote_name.mli  repo_name.ml  repo_name.mli  repo_root.ml  repo_root.mli  rev.ml  rev.mli  tag_name.ml  tag_name.mli  user_email.ml  (+13 more)
src/volgo-git-backend/: add.ml  arrow_split.ml  arrow_split.mli  branch.ml  branch.mli  commit.ml  config.ml  config.mli  current_branch.ml  current_branch.mli  current_revision.ml  current_revision.mli  dune  init.ml  init.mli  log.ml  log.mli  ls_files.ml  ls_files.mli  munged_path.ml  munged_path.mli  name_status.ml  name_status.mli  num_status.ml  num_status.mli  refs.ml  refs.mli  runtime.mli  show.ml  show.mli  volgo_git_backend.ml  volgo_git_backend.mli
src/volgo-git-eio/: dune  make_runtime.ml  make_runtime.mli  runtime.ml  runtime.mli  volgo_git_eio.ml  volgo_git_eio.mli
src/volgo-hg-unix/: dune  runtime.ml  runtime.mli  volgo_hg_unix.ml  volgo_hg_unix.mli
test/expect/: README.md  detached_head.ml  detached_head.mli  dune  files_with_curly_braces.ml  find_enclosing_repo_root.ml  find_ref.ml  find_ref.mli  git_exception_handler.ml  name_status_type_change.ml  nonraising_unit_tests.ml  num_status_without_lines.ml  raising_unit_tests.ml  small_graph.ml  user_config.ml  with_temp_repo.ml  with_temp_repo.mli
test/stdlib/: dune  import.ml  import.mli  test__array.ml  test__char.ml  test__expect.ml  test__int.ml  test__list.ml  test__path.ml  test__sexp.ml  test__stdlib.ml  test__string.ml  test__string.mli
test/toplevel/: dune  ocaml_toplevel.ml  ocaml_toplevel.mli  prelude.txt  process_output.md  process_output.ml
test/volgo/: dune  test__author.ml  test__bit_vector.ml  test__branch_name.ml  test__commit_message.ml  test__err.ml  test__exn.ml  test__file_contents.ml  test__git.ml  test__graph.ml  test__int_table.ml  test__log.ml  test__mock_rev_gen.ml  test__mock_rev_gen.mli  test__mock_revs.ml  test__name_status.ml  test__num_lines_in_diff.ml  test__num_status.ml  test__path_in_repo.ml  test__platform.ml  test__platform_repo.ml  test__ref_kind.ml  test__remote_branch_name.ml  test__remote_name.ml  test__repo_name.ml  test__repo_root.ml  test__rev.ml  test__rresult.ml  test__tag_name.ml  test__trait.ml  test__user_email.ml  test__user_handle.ml  test__user_name.ml
test/volgo-git-backend/: dune  test__arrow_split.ml  test__log.ml  test__munged_path.ml  test__name_status.ml  test__num_status.ml  test__num_status.mli  test__refs.ml  test__show.ml
test/volgo-git-unix/: dune  test__file_system.ml  test__hello_commit.ml  test__path_resolution.ml
test/volgo-hg-backend/: dune  test__hg_backend.ml
test/volgo-vcs/: dune  test__vcs_cli.ml
(+974 files in other folders)
