(library
 (name volgo_stdlib)
 (public_name volgo.stdlib)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Sexplib0
  -open
  Sexplib0.Sexp_conv)
 (libraries astring dyn ordering sexplib0)
 (modules
  (:standard \ stdlib_compat4xx stdlib_compat5xx))
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(rule
 (enabled_if
  (< %{ocaml_version} 5.1))
 (target stdlib_compat.ml)
 (action
  (copy stdlib_compat4xx.ml %{target})))

(rule
 (enabled_if
  (>= %{ocaml_version} 5.1))
 (target stdlib_compat.ml)
 (action
  (copy stdlib_compat5xx.ml %{target})))

(rule
 (enabled_if
  (< %{ocaml_version} 5.1))
 (target stdlib_compat.mli)
 (action
  (copy stdlib_compat4xx.mli %{target})))

(rule
 (enabled_if
  (>= %{ocaml_version} 5.1))
 (target stdlib_compat.mli)
 (action
  (copy stdlib_compat5xx.mli %{target})))
