(library
 (name vcs_test_helpers)
 (public_name vcs-test-helpers)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Volgo)
 (libraries base eio fpath fpath-sexp0 unix volgo)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
