(library
 (name volgo_base)
 (public_name volgo-base)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Pplumbing_err
  -open
  Volgo)
 (libraries base fpath fpath-sexp0 pp pplumbing-err volgo)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps -unused-code-warnings=force ppx_hash)))
