(library
 (name volgo_git_backend)
 (public_name volgo-git-backend)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_sexp0
  -open
  Pplumbing_pp_tty
  -open
  Pplumbing_err
  -open
  Sexplib0
  -open
  Sexplib0.Sexp_conv
  -open
  Volgo
  -open
  Volgo_stdlib)
 (libraries
  fpath
  fpath-sexp0
  pp
  pplumbing-err
  pplumbing-pp-tty
  sexplib0
  volgo
  volgo_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (modules_without_implementation runtime)
 (preprocess no_preprocessing))
