(library
 (name volgo_git_eio)
 (public_name volgo-git-eio)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_sexp0
  -open
  Pplumbing_err
  -open
  Sexplib0
  -open
  Sexplib0.Sexp_conv
  -open
  Volgo
  -open
  Volgo_stdlib)
 (libraries
  eio
  fpath
  fpath-sexp0
  pp
  pplumbing-err
  sexplib0
  volgo
  volgo-git-backend
  volgo_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
