(library
 (name volgo)
 (public_name volgo)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_sexp0
  -open
  Pplumbing_pp_tty
  -open
  Pplumbing_err
  -open
  Sexplib0
  -open
  Sexplib0.Sexp_conv
  -open
  Volgo_stdlib)
 (libraries
  bitv
  fpath
  fpath-sexp0
  pp
  pplumbing-err
  pplumbing-pp-tty
  sexplib0
  volgo_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps
   -unused-code-warnings=force
   ;; Actual linters
   ppx_js_style
   -allow-let-operators
   -check-doc-comments
   ;; Ppx used with deriving_inline
   ppx_sexp_conv))
 (modules_without_implementation
  error_intf
  process_intf
  process_output_handler_intf
  validated_string_intf
  vcs_intf)
 (preprocess no_preprocessing))
