(library
 (name vcs_expect_tests)
 (public_name vcs-tests.expect-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Expect_test_helpers_base
  -open
  Or_error.Let_syntax)
 (libraries
  base
  eio
  eio_main
  expect_test_helpers_core.expect_test_helpers_base
  fpath
  fpath-base
  vcs
  vcs_git_eio
  vcs_git_blocking
  vcs_test_helpers)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
