(library
 (name vcs_expect_test)
 (package volgo-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Pplumbing_err
  -open
  Volgo_base
  -open
  Volgo_stdlib)
 (libraries
  base
  eio
  eio_main
  fpath
  fpath-sexp0
  pp
  pplumbing-err
  unix
  vcs_test_helpers
  volgo_base
  volgo_git_eio
  volgo_git_unix
  volgo_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect ppx_sexp_value)))
