(library
 (name volgo_stdlib_test)
 (package volgo-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base
  -open
  Volgo_stdlib)
 (libraries
  base
  expect_test_helpers_core.expect_test_helpers_base
  volgo_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect ppx_here ppx_sexp_value)))
