(library
 (name volgo_stdlib_test)
 (package volgo-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Volgo_stdlib)
 (libraries volgo_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
