(library
 (name volgo_git_unix_test)
 (package volgo-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Pplumbing_err
  -open
  Stdio
  -open
  Expect_test_helpers_base
  -open
  Volgo
  -open
  Volgo_stdlib)
 (libraries
  base
  expect_test_helpers_core.expect_test_helpers_base
  fpath
  fpath-sexp0
  pp
  pplumbing-err
  stdio
  unix
  vcs_test_helpers
  volgo
  volgo_git_unix
  volgo_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
