(library
 (name volgo_test)
 (package volgo-tests)
 (inline_tests
  (deps
   (glob_files *.name-status)
   (glob_files *.num-status)
   (glob_files *.log)
   (glob_files *.refs)))
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Pplumbing_err
  -open
  Volgo
  -open
  Volgo_stdlib)
 (libraries
  base
  bitv
  eio
  eio_main
  fpath
  fpath-sexp0
  pp
  pplumbing-err
  volgo
  volgo_base
  volgo_git_backend
  volgo_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect ppx_sexp_value)))

(rule
 (copy
  %{project_root}/test/data/super-master-mind.name-status
  super-master-mind.name-status))

(rule
 (copy
  %{project_root}/test/data/super-master-mind.num-status
  super-master-mind.num-status))

(rule
 (copy
  %{project_root}/test/data/super-master-mind.refs
  super-master-mind.refs))

(rule
 (copy %{project_root}/test/data/super-master-mind.log super-master-mind.log))
