(library
 (name git_cli)
 (public_name git-cli)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_extended
  -open
  Or_error.Let_syntax)
 (libraries base fpath fpath-extended vcs)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (modules_without_implementation runtime)
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
