(library
 (name vcs)
 (public_name vcs)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Or_error.Let_syntax)
 (libraries base fpath fpath-base provider union-find)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (modules_without_implementation
  trait_add
  trait_branch
  trait_commit
  trait_config
  trait_file_system
  trait_git
  trait_init
  trait_log
  trait_ls_files
  trait_name_status
  trait_num_status
  trait_refs
  trait_rev_parse
  trait_show
  validated_string_intf
  vcs_interface)
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
