(library
 (name vcs)
 (public_name vcs)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_sexp0
  -open
  Sexplib0
  -open
  Sexplib0.Sexp_conv)
 (libraries astring fpath fpath-sexp0 provider)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (modules_without_implementation validated_string_intf vcs_interface)
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_enumerate
   ppx_sexp_conv
   ppx_sexp_value)))
