(library
 (name vcs_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Expect_test_helpers_base)
 (libraries base expect_test_helpers_core.expect_test_helpers_base stdio vcs)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))
